Now player data retrieval from db is async everywhere!